--- a/src/algorithms/tracking/gnuradio_blocks/CMakeLists.txt
+++ b/src/algorithms/tracking/gnuradio_blocks/CMakeLists.txt
@@ -45,6 +45,7 @@ set(TRACKING_GR_BLOCKS_SOURCES
     glonass_l1_ca_dll_pll_c_aid_tracking_cc.cc
     glonass_l1_ca_dll_pll_c_aid_tracking_sc.cc
     gps_l1_ca_kf_tracking_cc.cc
+    gps_l1_ca_dll_pll_tracking_reflectometry_cc.cc
     glonass_l2_ca_dll_pll_tracking_cc.cc
     glonass_l2_ca_dll_pll_c_aid_tracking_cc.cc
     glonass_l2_ca_dll_pll_c_aid_tracking_sc.cc
@@ -59,6 +60,7 @@ set(TRACKING_GR_BLOCKS_HEADERS
     glonass_l1_ca_dll_pll_c_aid_tracking_cc.h
     glonass_l1_ca_dll_pll_c_aid_tracking_sc.h
     gps_l1_ca_kf_tracking_cc.h
+    gps_l1_ca_dll_pll_tracking_reflectometry_cc.h
     glonass_l2_ca_dll_pll_tracking_cc.h
     glonass_l2_ca_dll_pll_c_aid_tracking_cc.h
     glonass_l2_ca_dll_pll_c_aid_tracking_sc.h
